# subx-cli

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  README.zh-TW.md  clippy.toml  subx_architecture.md  subx_readme.md  tarpaulin.toml  task.md
.config/: nextest.toml
.devcontainer/: devcontainer.json
.github/: copilot-instructions.md
.github/codex/: 01-project-foundation-report.md  02-cli-interface-report.md  03-clippy-cleanup-report.md  04-config-management-report.md  05-subtitle-format-engine-report.md  06-subtitle-format-engine-extension-report.md  07-subtitle-format-engine-tests-report.md  08-ai-service-integration-report.md  09-file-matching-engine-report.md  10-dry-run-cache-report.md  100-backlog-25-code-review-report.md  104-coverage-script-refactoring-report.md  105-bug-fix-16-match-command-cache-copy-mode-report.md  107-bug-16-copy-mode-fix-completion-report.md  108-backlog-27-wiremock-integration-testing-framework-phase1-report.md  11-format-conversion-system-report.md  110-backlog-27-wiremock-integration-testing-framework-phase3-report.md  111-backlog-27-wiremock-integration-testing-framework-phase4-5-report.md  115-clippy-await-holding-lock-warning-fix-report.md  116-backlog-28-config-legacy-migration-report.md  119-backlog-29-remove-unused-config-report.md  12-transformers-completion-report.md  120-backlog-29-code-review-report.md  122-backlog-30-implement-config-set-command-phase5-report.md  125-engine-ai-model-config-integration-fix-report.md  126-aus-panic-fix-report.md  127-backlog-31-integrate-symphonia-audio-transcoding-report.md  129-backlog-31-integrate-symphonia-audio-transcoding-phase4-6-report.md  13-audio-sync-engine-report.md  14-command-integration-report.md  15-match-command-cache-test-report.md  16-match-command-dryrun-skip-execute-report.md  17-deployment-release-report.md  18-unit-testing-coverage-report.md  19-unit-testing-coverage-report.md  20-unit-testing-coverage-report.md  21-match-command-di-injection-and-dryrun-report.md  22-openai-api-usage-display-report.md  23-beautify-mapping-table-display-report.md  24-multiline-mapping-table-display-report.md  (+46 more)
.github/instructions/: 02-cli-interface.md  03-config-management.md  04-subtitle-format-engine.md  07-format-conversion-system.md  08-audio-sync-engine.md  09-audio-sync-engine.md  11-deployment-release.md  12-unit-testing-coverage.md  command.instructions.md
.github/prompts/: bump-version.prompt.md  create-plan.prompt.md  implement-plan.prompt.md  rewrite-rustdoc.prompt.md  update-command-document.prompt.md  update-config-document.prompt.md  write-report.prompt.md
.github/reports/: 101-backlog-25-copy-move-implementation-report.md  102-match-command-success-checkmark-display-report.md  103-file-operation-error-display-implementation-report.md  106-code-review-bug-16-match-command-cache-copy-mode-fix.md  109-backlog-27-wiremock-integration-testing-framework-phase2-report.md  112-backlog-27-wiremock-integration-testing-framework-code-review-report.md  113-wiremock-cache-reuse-fix-report.md  114-backlog-27-wiremock-integration-testing-framework-code-review-report.md  117-backlog-28-config-legacy-migration-phase2-report.md  118-backlog-28-config-legacy-migration-phase4-5-report.md  121-backlog-30-implement-config-set-command-report.md  123-backlog-30-implement-config-set-command-phase6-7-report.md  124-encoding-detector-default-config-integration-report.md  128-backlog-31-integrate-symphonia-audio-transcoding-phase2-report.md  130-bug-18-fix-audio-decoder-error-handling-report.md  131-bug-17-sync-offset-skip-video-report.md  132-backlog-32.1-sync-config-restructure-report.md  133-backlog-32.2-whisper-api-integration-report.md  134-backlog-32.3-local-vad-implementation-report.md  135-backlog-32.4-sync-engine-refactor-report.md  136-backlog-32.4-sync-engine-refactor-phase5-6-report.md  152-unit-test-isolation-fix-report.md  (+41 more)
Formula/: subx.rb
Product Backlogs/: 01-project-foundation.md  02-cli-interface.md  03-config-management.md  05-ai-service-integration.md  06-file-matching-engine.md  09-command-integration.md  10-deployment-release.md  README.md  instruct-01-project-foundation.md
assets/: SubX - The Subtitle Revolution.srt
benches/: audio_processing.rs  file_id_generation_bench.rs  retry_performance.rs  vad_performance_comparison.rs
docs/: REPORT_TEMPLATE.md  ai-provider-integration-guide.md  config-usage-analysis.md  configuration-guide.md  report-guidelines.md  rustdoc-guidelines.md  sync-migration-guide.md  tech-architecture.md  testing-guidelines.md
example/: symphonia_rubato_example.rs
scripts/: check_coverage.sh  check_docs.sh  install.sh  quality_check.sh  test_parallel_stability.sh  test_unified_paths.sh
src/: config.rs  error.rs  lib.rs  main.rs
tests/: ai_config_timeout_basic_tests.rs  ai_prompts_coverage_tests.rs  ai_request_timeout_tests.rs  ai_retry_implementation_tests.rs  ai_retry_tests.rs  ai_retry_trait_tests.rs  ai_trait_implementation_tests.rs  audio_analyzer_tests.rs  audio_aus_integration_tests.rs  audio_error_handling_tests.rs  aus_panic_fix_tests.rs  azure_openai_api_integration_tests.rs  azure_openai_deployment_tests.rs  azure_openai_environment_tests.rs  azure_openai_error_handling_tests.rs  azure_openai_integration_tests.rs  azure_openai_response_parsing_tests.rs  cache_command_tests.rs  cli_config_args_comprehensive_tests.rs  cli_config_args_tests.rs  cli_generate_completion_args_comprehensive_tests.rs  cli_generate_completion_args_tests.rs  cli_integration_tests.rs  config_basic_integration.rs  config_cli_vad_support_tests.rs  config_command_comprehensive_tests.rs  config_command_set_tests.rs  config_get_value_completeness_tests.rs  config_integration_tests.rs  config_integration_tests_new.rs  config_migration_tests.rs  config_new_sync_structure_tests.rs  config_service_file_integration_tests.rs  config_service_integration_tests.rs  config_set_integration_tests.rs  config_validation_integration_tests.rs  config_validation_tests.rs  config_value_integration_tests.rs  debug_path_tests.rs  dependency_injection_integration_tests.rs  (+47 more)
(+287 files in other folders)
