[package]
name = "subx-cli"
version = "0.6.0"
edition = "2024"
authors = ["CHEN, CHUN <jim60105@gmail.com>"]
description = "AI subtitle processing CLI tool, which automatically matches, renames, and converts subtitle files."
license = "GPL-3.0-or-later"
repository = "https://github.com/jim60105/subx-cli"
homepage = "https://github.com/jim60105/subx-cli"
keywords = ["subtitle", "cli", "ai", "video"]
categories = ["command-line-utilities", "multimedia"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

# Documentation quality linting
[lints.rustdoc]
broken_intra_doc_links = "deny"
private_doc_tests = "warn"
invalid_rust_codeblocks = "warn"
bare_urls = "warn"

[lints.clippy]
missing_docs_in_private_items = "allow"  # Allow missing private docs
doc_markdown = "allow"  # Allow markdown formatting warnings

[lints.rust]
missing_docs = "allow"  # Allow missing docs at rust level

[dependencies]
# CLI framework
clap = { version = "4.5.40", features = ["derive", "cargo"] }
clap_complete = "4.5.54"

# Subtitle format parsing dependencies
regex = "1.0"
encoding_rs = "0.8"

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Configuration management
config = "0.15"

# HTTP client
reqwest = { version = "0.12.20", features = ["json", "multipart", "stream", "rustls-tls"] }

# File scanning
walkdir = "2.3"

# URL parsing and validation
url = "2"

# File change monitoring
notify = "8.0"

# Parallel processing support
futures = "0.3"

# Async trait support
async-trait = "0.1"
uuid = { version = "1.3", features = ["v4"] }

# Logging
log = "0.4"
env_logger = "0.11"

# User interface
colored = "3.0"
tabled = "0.20"
indicatif = "0.17"
dialoguer = "0.11"
md5 = "0.7"

# Configuration management dependencies: path resolution and multi-core detection
# Audio processing
symphonia = { version = "0.5", features = ["all-codecs", "all-formats"] }
 # Audio processing system migration to aus crate
aus = "0.1.8"
tempfile = "3.10"

# Whisper API 整合所需
tokio-util = { version = "0.7", features = ["codec"] }
hound = "3.5"
voice_activity_detector = { version = "0.1.1", features = ["async"] }
ort = "=2.0.0-rc.4"
ort-sys = "=2.0.0-rc.4"
rubato = "0.16.2"

# Configuration management dependencies: path resolution and multi-core detection
dirs = "6.0"
num_cpus = "1.0"

[dev-dependencies]
# testing frameworks and utilities
tokio-test = "0.4"
assert_cmd = "2.0"
predicates = "3.0"
tempfile = "3.10"

# mock and test case generation
mockall = "0.13"
rstest = "0.25"
test-case = "3.0"
regex = "1.10"  # For test output validation

# coverage and HTTP mocking
wiremock = "0.6"
criterion = { version = "0.6.0", features = ["html_reports"] }

[[bin]]
name = "subx-cli"
path = "src/main.rs"

[[bench]]
name = "retry_performance"
harness = false

[[bench]]
name = "file_id_generation_bench"
harness = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 0
debug = true
split-debuginfo = "unpacked"

# Cross-platform dependencies
[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winuser"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"
